--- a/views/index.html
+++ b/views/index.html
@@ -2,5 +2,5 @@
 <div ng-click="changeData1()">改变数据2</div>
 <div ng-click="changeName()">改变标题1</div>
 <div ng-click="changeName1()">改变标题2</div>
-<calendar date-range = "{{dateRange}}" calendar-name="{{name}}" picker-fn="aaa()"></calendar>
+<calendar date-range = "{{dateRange}}" calendar-name="{{name}}" cb-fn="aaa"></calendar>
 
