--- a/style/calendar.css
+++ b/style/calendar.css
@@ -1,107 +1,131 @@
-/*.calendar {*/
-/*padding: 0 10px 20px;*/
-/*font-family: helvetica, arial, sans-serif;*/
-/*background: #fff;*/
-/*}*/
-/*.calendar-wrapper {*/
-/*margin-top: 10px;*/
-/*}*/
-/*.calendar-wrapper table {*/
-/*width: 100%;*/
-/*border-collapse: collapse;*/
-/*}*/
-/*.calendar-wrapper h3 {*/
-/*text-align: center;*/
-/*font-size: 16px;*/
-/*font-weight: normal;*/
-/*line-height: 30px;*/
-/*}*/
-/*.calendar-wrapper tr {*/
-/*height: 48px;*/
-/*}*/
-/*.calendar-wrapper tr:first-child {*/
-/*height: 40px;*/
-/*background-image: -webkit-linear-gradient(bottom,transparent 50%,#dcdcdc 50%);*/
-/*background-image: linear-gradient(to bottom,transparent 50%,#dcdcdc 50%);*/
-/*background-size:100% 1px;*/
-/*background-repeat: no-repeat;*/
-/*background-position: bottom;*/
-/*}*/
-/*.calendar-wrapper th {*/
-/*width: 14.2857143%;*/
-/*color: #999;*/
-/*font-weight: normal;*/
-/*}*/
-/*.calendar-wrapper td {*/
-/*text-align: center;*/
-/*vertical-align: middle;*/
-/*font-size: 14px;*/
-/*padding: 0 2px;*/
-/*}*/
-/*.calendar-wrapper tr:nth-child(2) td {*/
-/*padding-top: 2px;*/
-/*}*/
-/*.calendar-wrapper td > div {*/
-/*height: 40px;*/
-/*line-height: 40px;*/
-/*}*/
-/*.calendar-wrapper td span {*/
-/*display: block;*/
-/*padding-top: 6px;*/
-/*line-height: 14px;*/
-/*font-family: Arial;*/
-/*}*/
-/*.calendar-wrapper td p {*/
-/*font-size: 12px;*/
-/*line-height: 0;*/
-/*color: #50b400;*/
-/*font-family: Arial;*/
-/*}*/
-/*.calendar .sunday p, .calendar .saturday p {*/
-/*color: #50b400;*/
-/*}*/
-/*.calendar .sunday, .calendar .saturday {*/
-/*color: #50b400;*/
-/*}*/
-/*.calendar .today > div {*/
-/*background: #f0f0f0;*/
-/*color: #333;/!*ff8400*!/*/
-/*border-radius: 5px;*/
-/*}*/
-/*.calendar .disabled {*/
-/*color: #ccc;*/
-/*}*/
-/*.calendar-wrapper .from-day > div, .calendar-wrapper .to-day > div {*/
-/*background: #50b400;*/
-/*color: #fff;*/
-/*border-radius: 5px;*/
-/*}*/
-/*.calendar-wrapper .from-day p, .calendar-wrapper .to-day p {*/
-/*color: #fff;*/
-/*}*/
-
-/*.calendar-tips {*/
-/*background: rgba(0, 0, 0, 0.8);*/
-/*color: #fff;*/
-/*width: 180px;*/
-/*padding: 10px;*/
-/*border-radius: 5px;*/
-/*text-align: center;*/
-/*/!*-webkit-transition: all 0.3s ease-in-out;*/
-/*transition: all 0.3s ease-in-out;*!/*/
-/*}*/
-/*.calendar-tips.fixed {*/
-/*left: 50%;*/
-/*margin-left: 50%;*/
-/*bottom: 20px;*/
-/*}*/
-
 * {
     padding: 0;
     margin: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .calendar-box {
+    overflow-x: hidden;
+    position: absolute;
+    top: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    -o-transform: translate3d(100%, 0, 0);
+    -ms-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    width: 100%;
+    min-height: 100%;
+    z-index: 99999;
+    background: #ffffff;
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch;
+}
+
+.movein {
+    -webkit-animation: movein .2s ease-in;
+    -moz-animation: movein .2s ease-in;
+    -o-animation: movein .2s ease-in;
+    -ms-animation: movein .2s ease-in;
+    animation: movein .2s ease-in;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.moveout {
+    -webkit-animation: moveout .2s ease-out;
+    -moz-animation: moveout .2s ease-out;
+    -o-animation: moveout .2s ease-out;
+    -ms-animation: moveout .2s ease-out;
+    animation: moveout .2s ease-out;
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    -o-transform: translate3d(100%, 0, 0);
+    -ms-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+}
+
+@keyframes movein {
+    from {
+        transform: translate3d(100%, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@-moz-keyframes movein /* Firefox */
+{
+    from {
+        -moz-transform: translate3d(100%, 0, 0);
+    }
+    to {
+        -moz-transform: translate3d(0, 0, 0);
+    }
+}
+
+@-webkit-keyframes movein /* Safari ºÍ Chrome */
+{
+    from {
+        -webkit-transform: translate3d(100%, 0, 0);
+    }
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+    }
+}
+
+@-o-keyframes movein /* Opera */
+{
+    from {
+        -o-transform: translate3d(100%, 0, 0);
+    }
+    to {
+        -o-transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes moveout {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+    to {
+        transform: translate3d(100%, 0, 0);
+    }
+}
+
+@-moz-keyframes moveout /* Firefox */
+{
+    from {
+        -moz-transform: translate3d(0, 0, 0);
+    }
+    to {
+        -moz-transform: translate3d(100%, 0, 0);
+    }
+}
+
+@-webkit-keyframes moveout /* Safari ºÍ Chrome */
+{
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+    }
+    to {
+        -webkit-transform: translate3d(100%, 0, 0);
+    }
+}
+
+@-o-keyframes moveout /* Opera */
+{
+    from {
+        -o-transform: translate3d(0, 0, 0);
+    }
+    to {
+        -o-transform: translate3d(100%, 0, 0);
+    }
 }
 
 .calendar-name {
@@ -116,7 +140,7 @@
 
 .calendar {
     text-align: center;
-    padding: 0 10px 20px
+    padding: 0 10px 20px;
 }
 
 .calendar .calendar-title {
